--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ python-dateutil = "*"
 pytz = "*"
 requests = "*"
 scrapy = "*"
-scrapy-sentry = "*"
+scrapy-sentry = {ref = "v1", git = "https://github.com/City-Bureau/scrapy-sentry.git"}
 scrapy-wayback-middleware = "*"
 city-scrapers-core = {ref = "main", git = "https://github.com/City-Bureau/city-scrapers-core.git", extras = ["azure"]}
 pypiwin32 = {version = "*",sys_platform = "== 'win32'"}
