--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Check imports with isort
         run: pipenv run isort . --check-only
 
+      - name: Check style with black
+        run: pipenv run black . --check
+
       - name: Lint with flake8
         run: pipenv run flake8 .
 
