--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ scrapy-sentry = {ref = "v1", git = "https://github.com/City-Bureau/scrapy-sentry
 scrapy-wayback-middleware = "*"
 city-scrapers-core = {ref = "main", git = "https://github.com/City-Bureau/city-scrapers-core.git", extras = ["azure"]}
 pdfminer-six = "*"
+scrapy-playwright = "*"
 
 [dev-packages]
 freezegun = "*"
