--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -24,4 +24,5 @@ jobs:
     name: Prevent workflow disable
     runs-on: ubuntu-latest
     steps:
+        - uses: actions/checkout@v3
         - uses: gautamkrishnar/keepalive-workflow@v1
