--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -25,4 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
+        
         - uses: gautamkrishnar/keepalive-workflow@v1
+          with:
+            time_elapsed: 0
