Test with fake gh username

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -29,5 +29,5 @@ jobs:
         - uses: gautamkrishnar/keepalive-workflow@v1
           with:
             time_elapsed: 0
-            committer_username: "SimmonsRitchie"
-            committer_email: "37225902+SimmonsRitchie@users.noreply.github.com"
+            committer_username: "FakeAccount"
+            committer_email: "fakeemail@email.com"
