Override default gh username

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -61,3 +61,6 @@ jobs:
 
       - name: Prevent workflow deactivation
         uses: gautamkrishnar/keepalive-workflow@v1
+        with:
+          committer_username: "citybureau-bot"
+          committer_email: "documenters@citybureau.org"
