[c] Test upgrade the keepalive-workflow from v1 to v2

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -59,8 +59,14 @@ jobs:
           export PYTHONPATH=$(pwd):$PYTHONPATH
           pipenv run scrapy combinefeeds -s LOG_ENABLED=False
 
+  keepalive-workflow:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: actions/checkout@v4
       - name: Prevent workflow deactivation
-        uses: gautamkrishnar/keepalive-workflow@v1
+        uses: gautamkrishnar/keepalive-workflow@v2
         with:
-          committer_username: "citybureau-bot"
-          committer_email: "documenters@citybureau.org"
+          auto_write_check: "true"
+          workflow_files: "archive.yml"
