--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -29,10 +29,11 @@ jobs:
 
       - name: Connect to OpenVPN
         run: |
-          sudo apt-get install -y openvpn
-          echo "$OPENVPN_USER" | sudo tee -a /etc/openvpn/client/auth
+          sudo apt-get update
+          sudo apt-get install -y --fix-missing openvpn
+          echo "$OPENVPN_USER" | sudo tee /etc/openvpn/client/auth
           echo "$OPENVPN_PASS" | sudo tee -a /etc/openvpn/client/auth
-          echo "$OPENVPN_CONFIG" | sudo tee -a /etc/openvpn/ovpn.conf
+          echo "$OPENVPN_CONFIG" | sudo tee /etc/openvpn/ovpn.conf
           sudo openvpn --config /etc/openvpn/ovpn.conf --daemon
           sleep 120
 
